--- a/index.HTML
+++ b/index.HTML
@@ -6,16 +6,12 @@
     </head>
     <body>
         <h1>Hello world!</h1>
-        <h2>python!</h2>
         <div><img src="helloworld.png" alt="Hello World from Space"style="width:100%;max-width:960px"></div>
         <div><img src="image.png" alt="Hello World from Space"style="width:100%;max-width:960px"></div>
+        <div><img src="photo.jpg" alt="Hello World from Space"style="width:100%;max-width:960px"></div>
         <p>This is the first file in my new Git Repo.</p>
         <p>This line is here to show how merging works.</p>
-     
     </body>
-<<<<<<< HEAD
-    </html>
-=======
+
 </html>
-  
->>>>>>> Nawres
+
